# mezon

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  run
api/: .gitignore  Dockerfile  pyproject.toml
api/mezon/: __init__.py  __main__.py
frontend/: .gitignore  Dockerfile  package.json
frontend/public/: index.html
frontend/src/: index.js
frontend/src/containers/: App.js
